--- a/css/style.css
+++ b/css/style.css
@@ -11,8 +11,7 @@
   width: 10vh;
 }
 
-#logo,
-#jackpot {
+#logo {
   display: block;
   margin-left: auto;
   margin-right: auto;
@@ -21,8 +20,11 @@
 }
 
 #jackpot {
+  margin-left: 32%;
   width: 50vw;
   height: 10vh;
+  margin-top: 2%;
+  font-size: 2rem;
 }
 
 .reelContainer,
@@ -59,8 +61,14 @@ span {
   height: 10vh;
   /* border: 2px solid greenyellow; */
   font-size: 3.5rem;
+  border: 4px solid yellow;
+  border-radius: 10px;
+  background-color: rgb(96, 96, 231);
+  color: yellow;
 }
 
 .betBorder {
-  border: 2px solid yellow;
+  border: 4px solid rgb(96, 96, 231);
+  border-radius: 10px;
+  background-color: yellow;
 }
